k8s/cron.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goat-cron
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goat-cron
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: goat-cron
    spec:
      containers:
        - image: docker.io/goatcommunity/api:3d48b7bd2a14000b83529778763de203cff21ac8
          imagePullPolicy: IfNotPresent
          name: goat-cron
          volumeMounts:
            - mountPath: /opt/config/db
              name: goat-config
      volumes:
        - name: goat-config
          configMap:
            name: goat-config
