k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: development
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/goatcommunity/db:3d48b7bd2a14000b83529778763de203cff21ac8
          imagePullPolicy: IfNotPresent
          # lifecycle:
          #   postStart:
          #     exec:
          #       command: [/bin/sh, -c, python3, /opt/setup_goat.py, -t, new_setup]
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
            - mountPath: /opt/config/db
              name: goat-config
            - mountPath: /opt/data
              name: postgredb
              subPath: development
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
        - name: goat-config
          secret:
            secretName: goat-config
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: development
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
